<resources>
    <string name="app_name">Android</string>

    <string name="continue_button">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="name">Name</string>

    <string name="register">REGISTER</string>
    <string name="login">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="sign_up_login_hint">Already have an account? Sign In</string>
    <string name="login_sign_up_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="username">03157</string>
    <string name="password">12345678</string>
    <string name="sign_in">Login</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="authenticationFailed">User Authentication Failed. Please try again.</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="create_account">Create account</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="users">Users</string>
    <string name="todo">TODO</string>
    <string name="products">Products</string>
    <string name="customers">Customers</string>
    <string name="orders">Orders</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="no_network_warning">Unable to connect internet, Please check your internet connection.</string>
    <string name="username_hint">Username</string>
    <string name="no_data_found">No Data Found</string>
    <string name="try_again">Try Again</string>
    <string name="notice">Notice</string>
    <string name="general">General</string>
    <string name="switch_role">Switch Role</string>
    <string name="feedback">Feedback</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="send_feedback">Send feedback</string>
    <string name="change_password">Change Password</string>
    <string name="location">Mymensingh</string>
    <string name="designation">Software Engineer</string>
    <string name="author_name">Kamruzzaman</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="update_cart">Update Cart</string>
    <string name="sub_total">Sub Total:</string>
    <string name="vat">+ VAT:</string>
    <string name="grand_total">Grand Total</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="next">Next</string>
    <string name="filter_customer">Filter Customer</string>
    <string name="customer_type">Customer Type</string>
    <string name="all">All</string>
    <string name="chemist">Chemist</string>
    <string name="institution">Institution</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit">Credit</string>
    <string name="cash">Cash</string>
    <string name="customer_verification">Customer Verification</string>
    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="expand_detail">Expand Detail</string>
    <string name="enter_order_note_here">Enter order note here</string>
    <string name="note">Note</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="_0176724245">0176724245</string>
    <string name="territory">Territory</string>
    <string name="est_delivery_date_28_mar_2020">Est Delivery Date: 28-MAR-2020</string>
</resources>