<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height"
    android:layout_marginBottom="@dimen/five"
    android:background="@drawable/bg_custom_layout">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/standard_padding"
        android:src="@drawable/mvvm"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Title"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/email"/>

    </LinearLayout>

</LinearLayout>