<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/fifteen"
    android:layout_marginEnd="@dimen/fifteen"
    android:layout_marginBottom="@dimen/five"
    android:background="@drawable/bg_bottom_line"
    android:orientation="vertical"
    android:paddingTop="@dimen/fifteen"
    android:paddingBottom="@dimen/fifteen">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prod_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:id="@+id/pack_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/five"
            android:text="@string/todo" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification" />

</LinearLayout>