<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_login_screen_background"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".ui.view.auth.LoginFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/gl_logo_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_logo_bottom"
        app:layout_constraintGuide_percent="0.25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/emailInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Email"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:text="@string/username" />


        <EditText
            android:id="@+id/passwordInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="Password"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:padding="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:padding="@dimen/five"
                android:text="@string/remember_me"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:padding="@dimen/five"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten"
            android:gravity="center_vertical|start"
            android:maxLines="2"
            android:padding="@dimen/five"
            android:text="@string/authenticationFailed"
            android:textColor="@color/red"
            android:textSize="@dimen/ten"
            android:visibility="gone" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:translationZ="@dimen/five" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>